<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ConsumeContent</string>
    <string name="twitter">Twitter</string>
    <string name="youtube">Youtube</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>

    <string name="user_name">User Name</string>
    <string name="all_notifications">All Notifications</string>
    <string name="youtube_channel">Youtube Channel</string>
    <string name="search_youtube">Search Youtube</string>
    <string name="search_twitter">Search Twitter</string>
    <string name="find_youtube_channel">Find Youtube Channel</string>
    <string name="twitter_handle">Twitter Handle</string>
    <string name="find_twitter_handle">Find Twitter Handle</string>
    <string name="feeds">Feeds</string>

    <string name="sign_in">Sign In</string>
    <string name="twitter_login_help">If you don\'t know the exact twitter username you must login to search</string>
    <string name="youtube_search_help">Picking a new channel will overwrite previous youtube settings (visibility and notifications)</string>
    <string name="rate_limit_error">Twitter only allows a certain number of searches every 15 minutes</string>
    <string name="page_does_not_exist_error">Could not find Twitter user</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add">AddActivity</string>


    <string name="set_alarm">Set Alarm</string>
    <string name="cancel">Cancel</string>
    <string name="only_on_wifi">Only on Wifi</string>
    <string name="hours">Hours</string>
    <string name="alarm_every_default">Every 3 hours</string>
    <string name="alarm_at_default">At 10:00 pm</string>
    <string name="new_alarm">New Alarm</string>
    <string name="disabled">disabled</string>
    <string name="play_sound">Play sound</string>
    <string name="vibrations_enabled">Vibrations enabled</string>
    <string name="enable_notification_on_mobile">Enable notifications on mobile</string>
    <string name="alarm_schedule">Alarm Schedule</string>
    <string name="schedule_time_example">The schedule time is used to limit when the app will trigger hourly notifications. (Every x hours)\n\nFor example if you set a new time from 8:00am to 9:30pm, you will start receiving notifications after 8 in the morning until 9:30 that night.\n(This won\'t stop alarms set to a specific time)</string>
    <string name="edit">Edit</string>
    <string name="groups">Groups</string>
    <string name="user_thumbnail">User Thumbnail</string>
    <string name="set_groups">Set Groups</string>
    <string name="set_groups_for_user">Set groups for user</string>
    <string name="group_name">Group Name</string>
    <string name="visible">Visible</string>
    <string name="users">Users</string>
    <string name="rename">Rename</string>

</resources>
