<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/dark_gray"
            android:text="@string/new_alarm"
            android:id="@+id/title_tv" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:minWidth="200dp"
            android:layout_height="40dp"
            android:weightSum="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/alarm_every_default"
                android:textColor="@color/dark_gray"
                android:id="@+id/every_tv"
                android:gravity="center"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/alarm_at_default"
                android:textColor="@color/dark_gray"
                android:id="@+id/at_tv"
                android:gravity="center"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:weightSum="2">

            <View
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/every_divider"
                android:background="@color/accent" />

            <View
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/at_divider"
                android:background="@color/accent" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TimePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/timePicker" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:id="@+id/every_v">

                <NumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/numberPicker"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_toRightOf="@+id/numberPicker"
                    android:layout_toEndOf="@+id/numberPicker"
                    android:layout_centerVertical="true"
                    android:text="@string/hours"/>


            </RelativeLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:gravity="center_vertical"
            android:paddingTop="5dp"
            android:id="@+id/only_wifi_v">


            <android.support.v7.widget.SwitchCompat
                android:id="@+id/only_wifi_sw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_accent"
                android:text="@string/only_on_wifi"/>


        </LinearLayout>

    </LinearLayout>

    <View style="@style/shadow_top" />

    <View style="@style/divider" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:weightSum="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            android:textColor="@color/dark_gray"
            android:textSize="16sp"
            android:id="@+id/cancel_tv"
            android:background="@drawable/selector_accent"
            android:gravity="center"
            android:layout_weight="1" />

        <View style="@style/divider_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/set_alarm"
            android:textColor="@color/dark_gray"
            android:textSize="16sp"
            android:id="@+id/create_tv"
            android:background="@drawable/selector_accent"
            android:gravity="center"
            android:layout_weight="1" />
    </LinearLayout>


</LinearLayout>