<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/notifications_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:paddingBottom="22dp" >


        <LinearLayout style="@style/list_item"
            android:id="@+id/all_notifications_v" >

            <TextView style="@style/list_item_text"
                android:text="@string/all_notifications" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/all_notifications_sw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false" />
        </LinearLayout>

        <View style="@style/divider"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"/>


        <LinearLayout style="@style/list_item"
            android:id="@+id/mobile_notifications_v">

            <TextView style="@style/list_item_text"
                android:text="@string/enable_notification_on_mobile" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/mobile_notifications_sw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"/>
        </LinearLayout>


        <View style="@style/divider"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"/>


        <LinearLayout style="@style/list_item"
            android:id="@+id/vibrations_v">

            <TextView style="@style/list_item_text"
                android:text="@string/vibrations_enabled" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/vibrations_sw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"/>
        </LinearLayout>

        <View style="@style/divider"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"/>


        <LinearLayout style="@style/list_item"
            android:id="@+id/play_sound_v" >

            <TextView style="@style/list_item_text"
                android:text="@string/play_sound" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/play_sound_sw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"/>
        </LinearLayout>

        <View style="@style/divider"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"/>

        <LinearLayout style="@style/list_item"
            android:id="@+id/schedule_v">

            <TextView style="@style/list_item_text"
                android:text="@string/alarm_schedule" />


            <ImageView
                android:id="@+id/icon_iv"
                android:layout_width="44dp"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:scaleType="fitEnd"
                android:src="@drawable/ic_today_grey600_36dp"/>

        </LinearLayout>


    </LinearLayout>


    <include layout="@layout/item_list_divider"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@+id/notifications_info"
        android:id="@+id/item_list_divider" />

    <com.edaviessmith.consumecontent.view.Fab
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:id="@+id/add_fab"
        android:layout_width="72dp"
        android:layout_height="72dp"
        app:colour="@color/accent"
        app:drawable="@drawable/ic_alarm_add_white_36dp"
        android:layout_alignBottom="@+id/item_list_divider"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>