<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <RelativeLayout
            android:id="@+id/group_thumbnail_v"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/selector_accent"
            android:padding="5dp">

            <ImageView
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:id="@+id/group_thumbnail_iv"
                android:contentDescription="@string/user_thumbnail"
                android:src="@drawable/ic_person_grey600_36dp"
                android:scaleType="fitCenter" />

            <ProgressBar
                style="?android:attr/android:progressBarStyle"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:id="@+id/group_thumbnail_pb"
                android:visibility="gone" />

        </RelativeLayout>

        <EditText
            android:id="@+id/group_name_edt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="25dp"
            android:textColor="@color/dark_gray"
            android:layout_marginStart="25dp"
            android:layout_toEndOf="@+id/group_thumbnail_v"
            android:layout_toRightOf="@+id/group_thumbnail_v"
            android:hint="@string/group_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/visible_v"
            android:layout_alignLeft="@+id/group_name_edt"
            android:layout_alignStart="@+id/group_name_edt"
            android:layout_below="@+id/group_name_edt"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/dark_gray"
            android:background="@drawable/selector_accent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true">

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/visible_sw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/gray_accent"
                android:gravity="center_vertical"
                android:text="@string/visible"/>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray">

        <View style="@style/divider"/>

        <View style="@style/shadow_bottom"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_accent"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:paddingRight="20dp"
            android:paddingEnd="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/users"/>

    </LinearLayout>

</LinearLayout>